# ZLworkspace

./: AS->C++  hello  testmpi.c
.metadata/.plugins/org.eclipse.cdt.core/: CMP.1466001067315.pdom  CMP.language.settings.xml  CSPIC.1453891468006.pdom  Copy of ZLMPI.language.settings.xml  DifficultPlus.1470901448825.pdom  DifficultPlus.language.settings.xml  GraphVisualizer.language.settings.xml  HDF5test.1461095071323.pdom  HDF5test.language.settings.xml  LePlasma_Monitor.language.settings.xml  LePlasma_VH.language.settings.xml  LePlasma_Visual.language.settings.xml  LePlasma_Visual_Host.language.settings.xml  LePlasma_Visualizer.language.settings.xml  LowB.1449814117473.pdom  MPI_Monitor.language.settings.xml  MinusExercises.1470892508036.pdom  MinusExercises.language.settings.xml  OMPTEST.1459350429933.pdom  OMPTEST.language.settings.xml  Tests.1467464215952.pdom  Tests.language.settings.xml  Transmitter.1460671841673.pdom  Transmitter.1462180102197.pdom  Transmitter.language.settings.xml  Visual_LePlasma.language.settings.xml  XMerge_LePlasma.1462085217079.pdom  XMerge_LePlasma.language.settings.xml  ZLMPI.1459348081308.pdom  ZLMPI.language.settings.xml  ZLOMP.language.settings.xml  ZLOMP_cal.language.settings.xml  ZLOpenGL.language.settings.xml  ZLOpenGL_OD.language.settings.xml  language.settings.xml  (+5 more)
DifficultPlus/: .cproject  .project  DifficlutPlus.cpp
DifficultPlus/Debug/: DifficlutPlus.d  DifficultPlus  makefile  subdir.mk
GraphVisualizer/: .cproject  .project  GraphVisualizer.cpp  LePlasma.output  LePlasma.output2  LePlasma.outputx  LePlasma1.txt  LePlasma2.txt  LePlasma3.txt
GraphVisualizer/Debug/: GraphVisualizer  GraphVisualizer.d  makefile  sources.mk  subdir.mk
GraphVisualizer/include/: GraphReader.h  Mathx.h  Plot.h
GraphVisualizer/src/: GraphReader.cpp  Mathx.cpp  Plot.cpp
LePlasma/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  LePlasma.cpp  LePlasma.h  Report 2016_06_26_11_21.output
LePlasma/Debug/: LePlasma  LePlasma.d  makefile  sources.mk  subdir.mk
LePlasma/Debug/Socket/: inet.d  subdir.mk
LePlasma/Debug/src/: CSPIC.d  Case.d  CaseLauncher.d  Cell.d  DispersionRelation.d  Distributer.d  Electron.d  Engine.d  Eular.d  ExternalField.d  Grid.d  HostGrid.d  MPIGrid.d  Particle.d  ParticleDistributer.d  PlateWave.d  Range.d  RunManager.d  SingleParticle.d  Tensor3D.d  TestFor.d  UniformB.d  UniformBFalse.d  UniformE.d  Vector3D.d  Vertex.d  subdir.mk
LePlasma/Socket/: inet.cpp  inet.h
LePlasma/include/: Buffer.h  CSPIC.h  Case.h  CaseLauncher.h  Cell.h  DispersionRelation.h  Distributer.h  Electron.h  Engine.h  Eular.h  ExternalField.h  Grid.h  HostGrid.h  MPIGrid.h  Particle.h  ParticleDistributer.h  PhysicalParameters.h  PlateWave.h  Range.h  RunManager.h  Tensor3D.h  TestFor.h  UniformB.h  UniformBFalse.h  UniformE.h  Vector3D.h  Vertex.h  indexCache.h
LePlasma/src/: CSPIC.cpp  Case.cpp  CaseLauncher.cpp  Cell.cpp  DispersionRelation.cpp  Distributer.cpp  Electron.cpp  Engine.cpp  Eular.cpp  ExternalField.cpp  Grid.cpp  HostGrid.cpp  MPIGrid.cpp  Particle.cpp  ParticleDistributer.cpp  PlateWave.cpp  Range.cpp  RunManager.cpp  Tensor3D.cpp  TestFor.cpp  UniformB.cpp  UniformBFalse.cpp  UniformE.cpp  Vector3D.cpp  Vertex.cpp
LePlasma_Visual/: .cproject  .project  CMakeLists.txt  DispersionRelation.h  LePlasma.h  LePlasma.output  LePlasma_Visual.cpp  Makefile  cmake_install.cmake  include_cal  install_help  src_cal
LePlasma_Visual/Debug/: LePlasma_Visual  LePlasma_Visual.d  makefile  sources.mk  subdir.mk
LePlasma_Visual/Debug/LeFrame/src/: DisplayObject.d  EventDispatcher.d  EventListener.d  GLEnvironment.d  GLEventManager.d  Graphics.d  Rect.d  Sprite.d  Stage.d  TextField.d  subdir.mk
LePlasma_Visual/Debug/src/: GridViewer.d  Mathx.d  Plot.d  Visualize.d  XYZIndicator.d  subdir.mk
LePlasma_Visual/Debug/src_cal/: CSPIC.d  Case.d  CaseLauncher.d  Cell.d  DispersionRelation.d  Distributer.d  Electron.d  Engine.d  Eular.d  ExternalField.d  Grid.d  HostGrid.d  MPIGrid.d  Particle.d  ParticleDistributer.d  PlateWave.d  Range.d  RunManager.d  Tensor3D.d  TestFor.d  UniformB.d  UniformBFalse.d  UniformE.d  Vector3D.d  Vertex.d  subdir.mk
LePlasma_Visual/LeFrame/include/: AScompat.h  DisplayObject.h  Event.h  EventDispatcher.h  EventListener.h  GLEnvironment.h  GLEventManager.h  Graphics.h  KeyBoard.h  Rect.h  Sprite.h  Stage.h  TextField.h
LePlasma_Visual/LeFrame/src/: DisplayObject.cpp  EventDispatcher.cpp  EventListener.cpp  GLEnvironment.cpp  GLEventManager.cpp  Graphics.cpp  Rect.cpp  Sprite.cpp  Stage.cpp  TextField.cpp
LePlasma_Visual/include/: Figure.h  GridViewer.h  Mathx.h  Plot.h  Visualize.h  XYZIndicator.h
LePlasma_Visual/src/: Figure.cpp  GridViewer.cpp  Plot.cpp  Visualize.cpp  XYZIndicator.cpp
LePlasma_Visual_Host/: .cproject  .project  LeFrame  LePlasma.h  LePlasma_Visualizer.cpp  Socket  include  include_cal  src  src_cal
LePlasma_Visual_Host/Debug/: LePlasma.output  LePlasma_Visual_Host  LePlasma_Visualizer.d  Report 2016_05_13_17_20.output  Report 2016_05_13_17_28.output  Report 2016_05_19_17_11.output  Report 2016_05_19_17_20.output  makefile  objects.mk  sources.mk  subdir.mk
MinusExercises/: .cproject  .project  minus.cpp
MinusExercises/Debug/: MinusExercises  makefile  minus.d  subdir.mk
Tests/: .cproject
Tests/Debug/: Tests  makefile  plus.d  subdir.mk
Transmitter/: .cproject  .project
Transmitter/Debug/: Transmitter  makefile  sources.mk
Transmitter/src/: Buffer.h  Transmitter.cpp
(+219 files in other folders)
