cmake_minimum_required(VERSION 3.6)
project(LePlasma)
SET(CMAKE_C_COMPILER mpicc)
SET(CMAKE_CXX_COMPILER mpicxx)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp")
include_directories(/usr/include/mpi/
        /home/ylang/workspace/LePlasma/include
        /home/ylang/workspace/LePlasma
        /home/ylang/workspace/LePlasma/Socket)
set(SOURCE_FILES
    include/Buffer.h
    include/Case.h
    include/CaseLauncher.h
    include/Cell.h
    include/CSPIC.h
    include/DispersionRelation.h
    include/Distributer.h
    include/Electron.h
    include/Engine.h
    include/Eular.h
    include/ExternalField.h
    include/Grid.h
    include/HostGrid.h
    include/indexCache.h
    include/MPIGrid.h
    include/Particle.h
    include/ParticleDistributer.h
    include/PhysicalParameters.h
    include/PlateWave.h
    include/Range.h
    include/RunManager.h
    include/Tensor3D.h
    include/TestFor.h
    include/UniformB.h
    include/UniformBFalse.h
    include/UniformE.h
    include/Vector3D.h
    include/Vertex.h
    Socket/inet.cpp
    Socket/inet.h
    src/Case.cpp
    src/CaseLauncher.cpp
    src/Cell.cpp
    src/CSPIC.cpp
    src/DispersionRelation.cpp
    src/Distributer.cpp
    src/Electron.cpp
    src/Engine.cpp
    src/Eular.cpp
    src/ExternalField.cpp
    src/Grid.cpp
    src/HostGrid.cpp
    src/MPIGrid.cpp
    src/Particle.cpp
    src/ParticleDistributer.cpp
    src/PlateWave.cpp
    src/Range.cpp
    src/RunManager.cpp
    src/Tensor3D.cpp
    src/TestFor.cpp
    src/UniformB.cpp
    src/UniformBFalse.cpp
    src/UniformE.cpp
    src/Vector3D.cpp
    src/Vertex.cpp
    LePlasma.cpp
    LePlasma.h)

add_executable(LePlasma ${SOURCE_FILES})